# document-simple-rag

./: .env.example  .gitignore  CONTAINER_SUMMARY.md  Makefile  RAG_Pipeline_Design_Document_v2.docx  RAG_Pipeline_Design_Document_v2.md  README.md  docker-compose.4container.yml  docker-compose.yml  run-service.sh
chromadb-uvicorn/: Dockerfile  README.md  requirements.txt  server.py
docker/backend/: Dockerfile  db_ensure.py  requirements.txt  s3_ensure.py  start.sh  supervisord.conf
docker/chromadb/: Dockerfile
docker/infra/: Dockerfile  start.sh  (+2 more)
docs/: minio-dev.md  postgres-dev.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  set-env.sh  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend-compiled/: .dockerignore  Dockerfile  nginx.conf
ocr-api/: Dockerfile  main.py  requirements.txt  set-env.sh
scripts/: build-frontend.sh  reingest_sec_fillings.sh
shared/: pyproject.toml
shared/rag_shared/: config.py
shared/rag_shared/auth/: __init__.py  api_key.py  authenticator.py  jwt_handler.py
shared/rag_shared/cache/: embedding_cache.py  redis_client.py
shared/rag_shared/db/: chroma_client.py  pool.py
shared/rag_shared/db/repositories/: chunk_repo.py  document_repo.py  embedding_repo.py
shared/rag_shared/logging/: __init__.py  setup.py
shared/rag_shared/metrics/: __init__.py  registry.py
shared/rag_shared/onnx/: math_utils.py  session_pool.py
shared/rag_shared/queue/: connection.py  schemas.py  topology.py
shared/rag_shared/storage/: s3_client.py
shared/rag_shared/tracing/: __init__.py  otel.py
(+126 files in other folders)
