[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-shared"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "aio-pika>=9.4",
    "redis[hiredis]>=5.0",
    "aioboto3>=12.4",
    "msgpack>=1.0",
    "structlog>=24.2",
    "opentelemetry-api>=1.26",
    "opentelemetry-sdk>=1.26",
    "opentelemetry-exporter-otlp-proto-grpc>=1.26",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "opentelemetry-instrumentation-asyncpg>=0.60b0",
    "prometheus-client>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["rag_shared"]
